--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "url": "git+https://github.com/ArtyomResh/image-resolution-loader.git"
   },
   "dependencies": {
+    "imagemin-pngquant": "^8.0.0",
+    "imagemin-zopfli": "^6.0.0",
     "loader-utils": "^1.2.3",
     "sharp": "^0.23.1"
   },
